# Domain-Adaptation

./: .gitattributes  .gitignore  SUPERVISOR_RESULTS_SYNTHESIS.md  TOP_NON_LWF_TEST_AUROC_RUNS.md  chexpert_target_250_direct_download_summary.json  cxr_report_embeddings.py  evaluate_reference_reports.py  manifest_chexpert_target_1000.summary.json  manifest_chexpert_target_500.summary.json  manifest_common_labels_pilot5h.summary.json  medgemma4b.py  mimic_target_1000_download_failures.json  mimic_target_1000_required_paths.txt  pilot5h_subset_materialization_summary.json  prompt.txt  prompt_verbose.txt
paper_v1/: README.md  pyproject.toml
paper_v1/configs/eval/: default.json
paper_v1/configs/experiments/: ablations.json  nih_to_chexpert_refresh_required.json  nih_to_chexpert_seed_sweep.json  nih_to_chexpert_to_mimic.json  nih_to_chexpert_to_mimic_harder_gate_only.json  nih_to_chexpert_to_mimic_limited.json  nih_to_chexpert_topk_seed_sweep.json  postmortem_nih_to_chexpert.json  recon_current_assets.json  refresh_chexpert.json  refresh_chexpert_full.json  smoke.json  stage0_nih_current.json
paper_v1/configs/model/: main_method.json  stage0_linear.json
paper_v1/outputs/smoke/: smoke_report.md  smoke_summary.csv
paper_v1/reports/: recon_summary.md
paper_v1/tests/: test_chexpert_refresh.py  test_data_shapes.py  test_forgetting.py  test_gate.py  test_label_mapping.py  test_losses.py  test_metrics.py  test_postmortem_models.py  test_prototypes.py  test_refresh_runner.py  test_seed_sweep.py  test_smoke_end_to_end.py  test_stage_transition.py
(+110921 files in other folders)
